[gd_scene load_steps=7 format=3 uid="uid://dln43ihhjtb5g"]

[ext_resource type="Script" uid="uid://d3o74sjk72vkl" path="res://scene/menu/menu.gd" id="1_ojih3"]
[ext_resource type="Texture2D" uid="uid://bw30vlr6pe3v5" path="res://assets/background/background.png" id="1_wwfty"]
[ext_resource type="LabelSettings" uid="uid://cjus0fw4kfcc8" path="res://scene/menu/title.tres" id="2_53055"]
[ext_resource type="LabelSettings" path="res://scene/menu/subtitle.tres" id="3_ojih3"]
[ext_resource type="Texture2D" uid="uid://d23g1w7vhke2x" path="res://assets/buttons/button.png" id="4_7ruq5"]
[ext_resource type="Texture2D" uid="uid://dspwogdk1nwc8" path="res://assets/buttons/button_hover.png" id="5_i0sq5"]

[node name="Menu" type="MarginContainer"]
script = ExtResource("1_ojih3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_wwfty")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Fruit 
Basket"
label_settings = ExtResource("2_53055")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Gotta catch 'em all"
label_settings = ExtResource("3_ojih3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_7ruq5")
texture_hover = ExtResource("5_i0sq5")

[node name="Label" type="Label" parent="VBoxContainer/StartButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.53300005
anchor_right = 0.5
anchor_bottom = 0.53300005
offset_left = -53.000015
offset_top = -15.498005
offset_right = 52.999985
offset_bottom = 15.501995
grow_horizontal = 2
grow_vertical = 2
text = "PLAY"
label_settings = ExtResource("3_ojih3")

[node name="ExitButton" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_7ruq5")
texture_hover = ExtResource("5_i0sq5")

[node name="Label" type="Label" parent="VBoxContainer/ExitButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.53300005
anchor_right = 0.5
anchor_bottom = 0.53300005
offset_left = -48.999985
offset_top = -15.498005
offset_right = 57.000015
offset_bottom = 15.501995
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = ExtResource("3_ojih3")
horizontal_alignment = 1

[node name="Creditos" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("4_7ruq5")
texture_hover = ExtResource("5_i0sq5")

[node name="Label" type="Label" parent="VBoxContainer/Creditos"]
layout_mode = 0
offset_left = 55.0
offset_top = 41.0
offset_right = 241.0
offset_bottom = 72.0
text = "CREDITS"
label_settings = ExtResource("3_ojih3")

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
